--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.32",
-    "expo-av": "^15.0.2",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.3",
-    "expo-document-picker": "^13.0.3",
+    "expo-constants": "~17.0.6",
+    "expo-document-picker": "~13.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-notifications": "^0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
@@ -41,7 +43,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
